# elliptic

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: elliptic.h
misc/: bench_hd_ed25519.c  bench_hd_secp256k1.c  bench_sign_ed25519.c  bench_sign_secp256k1.c  test_hd_ed25519.c  test_hd_secp256k1.c  test_sign_ed25519.c  test_sign_secp256k1.c
src/: keychain.c  keypair.c  sign.c  verify.c
src/bip32/: ed25519-hd.c  ed25519-hd.h  secp256k1-hd.c  secp256k1-hd.h
